<resources>
    <string name="app_name">EZKapal</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nama">I Dewa Made Laksana Putra</string>
    <string name="null_nama">Name</string>
    <string name="email">dewalaksana@student.unud.ac.id</string>
    <string name="email_text">Email : </string>
    <string name="ktp_text">KTP : </string>
    <string name="ktp">1394000012321002 </string>
    <string name="nomor_telepon_text">Telepon : </string>
    <string name="nomor_telepon">08977200423</string>
    <string name="pelabuhan_tujuan">Pelabuhan Tujuan</string>
    <string name="pelabuhan_asal">Pelabuhan Asal</string>
    <string name="tanggal_keberangkatan">Tanggal Keberangkatan</string>
    <string name="tipe_jasa">Tipe Jasa</string>
    <string name="golongan_kendaraan">Golongan Kendaraan</string>
    <string name="nomor_polisi">Nomor Polisi</string>
    <string name="jumlah_penumpang">Jumlah Penumpang</string>
    <string name="btn_cari">Cari Jadwal</string>
    <string name="btn_update">Update</string>
    <string name="btn_edit_password">Edit Password</string>
    <string name="btn_pilih">Pilih Tiket</string>
    <string name="status">Status : </string>
    <string name="Pcode">Kode : </string>
    <string name="kodePelabuhan">AFF</string>
    <string name="textTypePelabuhan">Tipe Pelabuhan : </string>
    <string name="tipePelabuhan">Kapal</string>
    <string name="textLamaBeroperasi">Lama Beroperasi : </string>
    <string name="lamaBeroperasi">5 </string>
    <string name="tahun"> Tahun</string>
    <string name="textAlamat">Alamat : </string>
    <string name="alamat">-</string>
    <string name="button_pelabuhan">Pilih Pelabuhan</string>
    <string name="on">On</string>
    <string name="beroperasi">Beroperasi</string>
    <string name="off">Off</string>
    <string name="tidakBeroperasi">Tidak Beroperasi</string>
    <string name="start_clock">20:00</string>
    <string name="end_clock">21:00</string>
    <string name="date">22 / 03 / 2022</string>
    <string name="days">Senin</string>
    <string name="dermaga">Dermaga</string>
    <string name="harga">50.000,-</string>
    <string name="rupiah">Rp. </string>
    <string name="detail_jadwal">Detail Jadwal</string>
    <string name="status_transaksi">Status</string>
    <string name="pemesan">Pemesan</string>
    <string name="penumpang">Penumpang</string>
    <string name="penumpang_required">Penumpang (*)</string>
    <string name="nama_penumpang">Nama Penumpang</string>
    <string name="masukan_penumpang">Masukan Penumpang</string>
    <string name="kapal">Caspla</string>
    <string name="waktu_pembayaran">Waktu Pembayaran : </string>
    <string name="jam_berakhir">01:00:00</string>
    <string name="terbayar">Terbayarkan</string>
    <string name="tidak_terbayar">Tidak Terbayarkan</string>
    <string name="ditolak">Ditolak</string>
    <string name="metode_pembayaran">Metode Pembayaran</string>
    <string name="pilih_metode">Pilih Metode Pembayaran</string>
    <string name="nomor_rekening">1213124123</string>
    <string name="metode">Transfer manual</string>
    <string name="nomor_telepon_placeholder">Nomor Telepon</string>
    <string name="required_star">*</string>
    <string name="required_profile">Harus diisi*</string>

    <integer name="minPenumpang">1</integer>
    <integer name="maxPenumpang">10</integer>

    <string name="company_name">E-Tiket Pelabuhan</string>
    <string name="slogan">Transportasi Air mudah yang kamu butuhkan</string>

    <string name="login_placeholder">Login</string>
    <string name="username_placeholder">Username</string>
    <string name="password_placeholder">Password</string>
    <string name="nama_placeholder">Nama Anda</string>
    <string name="email_placeholder">Email Anda</string>
    <string name="alamat_placeholder">Alamat Anda</string>
    <string name="nohp_placeholder">Nomor Handphone</string>
    <string name="old_password_placeholder">Password Lama Anda</string>
    <string name="new_password_placeholder">Password Baru Anda</string>
    <string name="new_password_confirm_placeholder">Konfirmasi Password Baru Anda</string>
    <string name="btn_login">Sign In</string>
    <string name="btn_register">Sign Up</string>

    <string name="pemesanan_sukses">Pemesanan Sukses</string>
    <string name="pemesanan_sukses_text">Terima kasih telah memesan E-Tiket, harap membayar pesanan sebelum waktu habis</string>

    <string name="lanjutkan">Lanjutkan</string>

    <string name="edit_profile">Edit Profile >></string>

    <string name="transaksi">Transaksi</string>
    <string name="transaksi_terkini">Transaksi Terkini</string>
    <string name="jadwal_transportasi">Jadwal Transportasi</string>
    <string name="jadwal_kapal">Daftar Jadwal</string>
    <string name="data_kapal">Info Transportasi</string>
    <string name="history_transaksi">Riwayat Transaksi</string>
    <string name="hubungi_kami">Hubungi Kami</string>
    <string name="logout">Logout</string>
    <string name="cari_jadwal_admin">Cari</string>
    <string name="batal">Batal</string>
    <string name="batalkan">Batalkan</string>
    <string name="upload_transaksi">Upload Bukti Pembayaran</string>
    <string name="lihat_pembayaran">Lihat Pembayaran</string>
    <string name="upload_ulang">Upload Kembali</string>
    <string name="pilih_file">Pilih File</string>
    <string name="upload">Upload</string>
    <string name="upload_profile">Upload Profile</string>
    <string name="batal_transaksi">Batalkan Pemesanan</string>
    <string name="review">Review Layanan</string>
    <string name="ticket_btn">Unduh Tiket</string>
    <string name="kirim_review">Kirim Review !</string>
    <string name="hapus_review">Hapus Review</string>
    <string name="verifikasi_title">Verifikasi</string>
    <string name="verifikasi_Button">Verifikasi</string>
    <string name="verifikasi_batal">Batal</string>
    <string name="verifikasi_nama">Nama Pemegang Tiket : </string>
    <string name="verifikasi_kode_tiket">Kode Tiket : </string>
    <string name="verifikasi_status">Status Tiket : </string>
    <string name="verifikasi_status_placeholder"> Not Used</string>
    <string name="verifikasi_tanggal">Tanggal Tiket : </string>
    <string name="kode_tiket">0000000000001</string>
    <string name="notification_title">Notification Title</string>
    <string name="notification_text">Notification Text</string>

    <string name="token">token</string>
    <string name="type_account">type_account</string>
    <string name="name_shared_preference">name</string>
    <string name="address_shared_preference">address</string>
    <string name="email_shared_preference">email</string>
    <string name="number_shared_preference">nohp</string>
    <string name="picture_shared_preference">foto</string>
    <string name="shared_preference">tokenSharedPreference</string>


    <string name="pelabuhan_not_found">Tidak ada pelabuhan yang ditemukan</string>
    <string name="notification_not_found">Tidak ada notifikasi yang ditemukan</string>
    <string name="try_again">Ulangi kembali</string>
    <string name="ticket_not_found">Tidak ada transaksi yang ditemukan</string>
    <string name="schedule_not_found">Tidak ada jadwal yang ditemukan</string>

    <string name="menu_archieve">Arsipkan</string>
    <string name="menu_delete">Hapus</string>
    <string name="menu_delete_notifikasi">Hapus Notifikasi</string>


    <string-array name="service_type">
        <item>Penumpang</item>
        <item>Kendaraan</item>
    </string-array>

    <string name="scanner_activity">ZXing Scanner - Full Activity</string>
    <string name="scanner_fragment_activity">ZXing Scanner - Full Fragment Activity</string>
    <string name="simple_scanner_activity">ZXing Scanner - Simple Activity</string>
    <string name="custom_view_finder_scanner_activity">ZXing Scanner - Custom View Finder Activity</string>
    <string name="scaling_scanner_activity">ZXing Scanner - Scaling Activity</string>
    <string name="simple_scanner_fragment_activity">ZXing Scanner - Simple Fragment Activity</string>
    <string name="full_screen_scanner_fragment_activity">ZXing Scanner - Full Screen Fragment Activity</string>
    <string name="simple_activity_sample">Simple Activity Sample</string>
    <string name="simple_fragment_sample">Simple Fragment Sample</string>
    <string name="activity_sample">Full Activity Sample</string>
    <string name="fragment_sample">Full Fragment Sample</string>
    <string name="full_screen_sample">Full Screen Fragment Sample</string>
    <string name="custom_view_finder_sample">Custom View Finder Sample</string>
    <string name="scaling_sample">Scaling Sample</string>
    <string name="toggle_flash">Flash</string>
    <string name="flash_on">Flash [ON]</string>
    <string name="flash_off">Flash [OFF]</string>
    <string name="auto_focus_on">Auto Focus [ON]</string>
    <string name="auto_focus_off">Auto Focus [OFF]</string>
    <string name="formats">Formats</string>
    <string name="choose_formats">Choose Formats</string>
    <string name="select_camera">Select a Camera</string>
    <string name="ok_button">OK</string>
    <string name="cancel_button">Cancel</string>
    <bool name="cameraPreviewShouldFillView">true</bool>
</resources>