<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="15dp"
    tools:context=".Fragment.VerifikasiFragment">

    <TextView
        android:id="@+id/verifikasi_tanggal_text"
        style="@style/PembelianTextSecondary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/verifikasi_tanggal"
        android:textSize="15sp"
        android:textStyle="normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tanggal_tiket"
        style="@style/PembelianTextSecondary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="normal"
        app:layout_constraintStart_toEndOf="@id/verifikasi_tanggal_text"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/nama_constraint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tanggal_tiket">

        <TextView
            android:id="@+id/text_verifikasi_nama"
            style="@style/PembelianTextPrimary"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/verifikasi_nama"
            android:textColor="@color/light_grey"
            android:textStyle="normal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/nama_verifikasi_tiket"
            style="@style/PembelianTextPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:maxLines="1"
            android:text="@string/nama"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_verifikasi_nama" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/kode_tiket_constraint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nama_constraint">

        <TextView
            android:id="@+id/text_kode_tiket"
            style="@style/PembelianTextPrimary"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/verifikasi_kode_tiket"
            android:textColor="@color/light_grey"
            android:textStyle="normal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/kode_tiket"
            style="@style/PembelianTextPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:maxLines="1"
            android:text="@string/kode_tiket"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_kode_tiket" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/status_tiket_constraint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/kode_tiket_constraint">

        <TextView
            android:id="@+id/text_status"
            style="@style/PembelianTextPrimary"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/verifikasi_status"
            android:textColor="@color/light_grey"
            android:textStyle="normal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/status_tiket"
            style="@style/PembelianTextPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:maxLines="1"
            android:text="@string/verifikasi_status_placeholder"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_status" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/button_verifikasi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:text="@string/verifikasi_Button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/status_tiket_constraint" />


</androidx.constraintlayout.widget.ConstraintLayout>