<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/pelabuhan_layout"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <ImageView
                    android:id="@+id/image_pelabuhan"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/logo2"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginHorizontal="10dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent">
                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                        <TextView
                            android:id="@+id/nama_pelabuhan"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:text="@string/pelabuhan_tujuan"
                            style="@style/PelabuhanTextPrimary"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"/>

                        <TextView
                            android:id="@+id/statusPelabuhan"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:text="@string/status"
                            style="@style/PelabuhanTextTertiary"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"/>
                        <TextView
                            android:id="@+id/statsPelabuhan"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginVertical="10dp"
                            android:text="@string/beroperasi"
                            android:textColor="@color/green"
                            style="@style/PelabuhanTextTertiary"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toEndOf="@id/statusPelabuhan"/>

                        <TextView
                            android:id="@+id/Pcode"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:text="@string/Pcode"
                            style="@style/PelabuhanTextSecondary"
                            app:layout_constraintEnd_toStartOf="@id/pelabuhan_code"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintTop_toTopOf="parent"/>

                        <TextView
                            android:id="@+id/pelabuhan_code"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="15dp"
                            android:text="@string/kodePelabuhan"
                            style="@style/PelabuhanTextPrimary"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"/>

                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.cardview.widget.CardView>
            </androidx.constraintlayout.widget.ConstraintLayout>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/expandable_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/pelabuhan_layout">

                <TextView
                    android:id="@+id/text_tipe_pelabuhan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/textTypePelabuhan"
                    android:layout_marginVertical="10dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="10dp"
                    style="@style/PelabuhanTextSecondary"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/tipe_pelabuhan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tipePelabuhan"
                    android:layout_marginVertical="10dp"
                    style="@style/PelabuhanTextSecondary"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toEndOf="@id/text_tipe_pelabuhan" />

                <TextView
                    android:id="@+id/text_lama_beroperasi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/textLamaBeroperasi"
                    android:layout_marginVertical="10dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="10dp"
                    style="@style/PelabuhanTextSecondary"
                    app:layout_constraintTop_toBottomOf="@id/text_tipe_pelabuhan"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/lama_beroperasi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lamaBeroperasi"
                    android:layout_marginVertical="10dp"
                    style="@style/PelabuhanTextSecondary"
                    app:layout_constraintTop_toBottomOf="@id/text_tipe_pelabuhan"
                    app:layout_constraintStart_toEndOf="@id/text_lama_beroperasi" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tahun"
                    android:layout_marginVertical="10dp"
                    style="@style/PelabuhanTextSecondary"
                    app:layout_constraintTop_toBottomOf="@id/text_tipe_pelabuhan"
                    app:layout_constraintStart_toEndOf="@id/lama_beroperasi" />

                <TextView
                    android:id="@+id/text_alamat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/textAlamat"
                    android:layout_marginVertical="10dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="10dp"
                    style="@style/PelabuhanTextSecondary"
                    app:layout_constraintTop_toBottomOf="@id/text_lama_beroperasi"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/alamat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/alamat"
                    android:layout_marginHorizontal="15dp"
                    style="@style/PelabuhanTextSecondary"
                    app:layout_constraintTop_toBottomOf="@id/text_alamat"
                    app:layout_constraintStart_toStartOf="parent" />

                <Button
                    android:id="@+id/button_pilih_pelabuhan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/button_pelabuhan"
                    app:layout_constraintTop_toBottomOf="@id/alamat"
                    app:layout_constraintStart_toStartOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>