<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.LandingActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginBottom="250dp"
        android:src="@drawable/logo2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/company_name"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/company_name"
        android:textAlignment="center"
        android:fontFamily="@font/bungee"
        android:textSize="30sp"
        android:textColor="@android:color/black"
        android:padding="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo"/>
    <TextView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/slogan"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:padding="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/company_name"/>

    <Button
        android:id="@+id/btn_login_landing"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:background="@android:color/transparent"
        android:textColor="@color/black"
        android:text="@string/btn_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="50dp"
        android:layout_marginEnd="25dp"/>

    <Button
        android:id="@+id/btn_register_landing"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:background="@android:color/transparent"
        android:textColor="@color/black"
        android:text="@string/btn_register"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="50dp"
        android:layout_marginStart="25dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>